--- a/back end/rcf-soluciones-informaticas/products-service/src/main/resources/application.yml
+++ b/back end/rcf-soluciones-informaticas/products-service/src/main/resources/application.yml
@@ -10,5 +10,16 @@ spring:
     hibernate:
       ddl-auto: validate
     show-sql: true
+
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+    operationsSorter: method
+    tagsSorter: alpha
+
+
+
 server:
   port: 8086
