--- a/back end/rcf-soluciones-informaticas/products-service/src/main/resources/application.yml
+++ b/back end/rcf-soluciones-informaticas/products-service/src/main/resources/application.yml
@@ -10,6 +10,13 @@ spring:
     hibernate:
       ddl-auto: validate
     show-sql: true
+  cloud:
+    consul:
+      host: localhost
+      port: 8500
+      discovery:
+        enabled: true
+        register: true
 
 springdoc:
   api-docs:
