--- a/back end/rcf-soluciones-informaticas/users-service/src/main/resources/application.yml
+++ b/back end/rcf-soluciones-informaticas/users-service/src/main/resources/application.yml
@@ -10,7 +10,13 @@ spring:
     hibernate:
       ddl-auto: validate
     show-sql: true
-
+  cloud:
+    consul:
+      host: localhost
+      port: 8500
+      discovery:
+        enabled: true
+        register: true
 springdoc:
   api-docs:
     path: /api-docs
