--- a/back end/rcf-soluciones-informaticas/gateway-service/pom.xml
+++ b/back end/rcf-soluciones-informaticas/gateway-service/pom.xml
@@ -29,8 +29,15 @@
 	<properties>
 		<java.version>21</java.version>
 		<spring-cloud.version>2025.0.0</spring-cloud.version>
-	</properties>
-	<dependencies>
+        <org.springdoc.version>2.8.13</org.springdoc.version>
+    </properties>
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>${org.springdoc.version}</version>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
