Terminando modulo de servicio

--- a/back end/rcf-soluciones-informaticas/gateway-service/src/main/resources/application.yml
+++ b/back end/rcf-soluciones-informaticas/gateway-service/src/main/resources/application.yml
@@ -9,6 +9,16 @@ spring:
         enabled: true
         register: true
     gateway:
+      globalcors:
+        corsConfigurations:
+          '[/**]':
+            allowedOrigins: "http://host.docker.internal:8086"
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+              - DELETE
+            allowedHeaders: "*"
       server:
         webmvc:
           routes:
