--- a/back end/rcf-soluciones-informaticas/gateway-service/src/main/resources/application.yml
+++ b/back end/rcf-soluciones-informaticas/gateway-service/src/main/resources/application.yml
@@ -1,73 +1,6 @@
 spring:
   application:
     name: gateway-service
-  cloud:
-    consul:
-      host: localhost
-      port: 8500
-      discovery:
-        enabled: true
-        register: true
-    gateway:
-      globalcors:
-        corsConfigurations:
-          '[/**]':
-            allowedOrigins: "http://host.docker.internal:8086"
-            allowedMethods:
-              - GET
-              - POST
-              - PUT
-              - DELETE
-            allowedHeaders: "*"
-      server:
-        webmvc:
-          routes:
-            - id: users-service
-              uri: lb://users-service
-              predicates:
-                - Path=/users/**
-              filters:
-                - StripPrefix=1
-            - id: orders-service
-              uri: lb://orders-service
-              predicates:
-                - Path=/orders/**
-              filters:
-                - StripPrefix=1
-            - id: products-service
-              uri: lb://products-service
-              predicates:
-                - Path=/products/**
-              filters:
-                - StripPrefix=1
-            - id: schedules-service
-              uri: lb://schedules-service
-              predicates:
-                - Path=/schedules/**
-              filters:
-                - StripPrefix=1
-            - id: services-service
-              uri: lb://services-service
-              predicates:
-                - Path=/services/**
-              filters:
-                - StripPrefix=1
-springdoc:
-  api-docs:
-    path: /api-docs
-  swagger-ui:
-    urls:
-      - name: usuarios
-        url: /users/api-docs
-      - name: ordenes
-        url: /orders/api-docs
-      - name: productos
-        url: /products/api-docs
-      - name: horarios
-        url: /schedules/api-docs
-      - name: servicios
-        url: /services/api-docs
-server:
-  port: 8080
-
-
+  config:
+    import:
+      - optional:configserver:http://localhost:8100/
