--- a/back end/rcf-soluciones-informaticas/services-service/src/main/resources/application.yml
+++ b/back end/rcf-soluciones-informaticas/services-service/src/main/resources/application.yml
@@ -1,29 +1,6 @@
 spring:
   application:
     name: services-service
-  datasource:
-    url: jdbc:mysql://localhost:3306/RCF_SOLUCIONES_INFORMATICAS_SERVICES_SERVICE?useSSL=false&allowPublicKeyRetrieval=true&serverTimeZone=UTC&autoReconnect=true
-    username: root
-    password: mysql
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  jpa:
-    hibernate:
-      ddl-auto: validate
-    show-sql: true
-  cloud:
-    consul:
-      host: localhost
-      port: 8500
-      discovery:
-        enabled: true
-        register: true
-springdoc:
-  api-docs:
-    path: /api-docs
-  swagger-ui:
-    path: /swagger-ui.html
-    operationsSorter: method
-    tagsSorter: alpha
-
-server:
-  port: 8088
+  config:
+    import:
+      - optional:configserver:http://localhost:8100/
