--- a/back end/rcf-soluciones-informaticas/docker-compose.yml
+++ b/back end/rcf-soluciones-informaticas/docker-compose.yml
@@ -11,3 +11,14 @@ services:
       - CONSUL_BIND_INTERFACE=eth0
     command: agent -dev -client=0.0.0.0
     restart: unless-stopped
+  prometheus:
+    image: prom/prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+
+  grafana:
+    image: grafana/grafana
+    ports:
+      - "3000:3000"
