--- a/back end/rcf-soluciones-informaticas/schedules-service/pom.xml
+++ b/back end/rcf-soluciones-informaticas/schedules-service/pom.xml
@@ -60,6 +60,11 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
             <version>${org.mapstruct.version}</version>
